// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Neon design system snapshots Button snapshot [{ name: 'arcadeIce', label: 'Blue Nebula' }] 1`] = `
<View
  accessibilityLabel="Play - Blue Nebula"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 16,
        "paddingVertical": 11,
      },
      {
        "minHeight": 48,
      },
      {
        "elevation": 3,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.14,
        "shadowRadius": 3,
      },
      {
        "backgroundColor": "#4F9CFF",
        "borderColor": "#0000001F",
        "borderRadius": 14,
        "borderWidth": 1.5,
        "opacity": 1,
      },
      undefined,
    ]
  }
>
  <ViewManagerAdapter_ExpoLinearGradient
    colors={
      [
        1040187391,
        150994943,
      ]
    }
    endPoint={
      [
        0.5,
        1,
      ]
    }
    pointerEvents="none"
    startPoint={
      [
        0.5,
        0,
      ]
    }
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <Text
    style={
      [
        {
          "fontSize": 14,
          "letterSpacing": 0.8,
        },
        {
          "color": "#101A31",
          "fontFamily": "Baloo2_700Bold",
          "fontWeight": "400",
          "opacity": 1,
          "textTransform": "uppercase",
        },
      ]
    }
  >
    Play - Blue Nebula
  </Text>
</View>
`;

exports[`Neon design system snapshots Button snapshot [{ name: 'neonParty', label: 'Lime Pop' }] 1`] = `
<View
  accessibilityLabel="Play - Lime Pop"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 16,
        "paddingVertical": 11,
      },
      {
        "minHeight": 48,
      },
      {
        "elevation": 3,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.14,
        "shadowRadius": 3,
      },
      {
        "backgroundColor": "#5DE07D",
        "borderColor": "#0000001F",
        "borderRadius": 14,
        "borderWidth": 1.5,
        "opacity": 1,
      },
      undefined,
    ]
  }
>
  <ViewManagerAdapter_ExpoLinearGradient
    colors={
      [
        1040187391,
        150994943,
      ]
    }
    endPoint={
      [
        0.5,
        1,
      ]
    }
    pointerEvents="none"
    startPoint={
      [
        0.5,
        0,
      ]
    }
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <Text
    style={
      [
        {
          "fontSize": 14,
          "letterSpacing": 0.8,
        },
        {
          "color": "#122116",
          "fontFamily": "Baloo2_700Bold",
          "fontWeight": "400",
          "opacity": 1,
          "textTransform": "uppercase",
        },
      ]
    }
  >
    Play - Lime Pop
  </Text>
</View>
`;

exports[`Neon design system snapshots Button snapshot [{ name: 'sunsetPulse', label: 'Sunset Fire' }] 1`] = `
<View
  accessibilityLabel="Play - Sunset Fire"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 16,
        "paddingVertical": 11,
      },
      {
        "minHeight": 48,
      },
      {
        "elevation": 3,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.14,
        "shadowRadius": 3,
      },
      {
        "backgroundColor": "#FF5F5F",
        "borderColor": "#0000001F",
        "borderRadius": 14,
        "borderWidth": 1.5,
        "opacity": 1,
      },
      undefined,
    ]
  }
>
  <ViewManagerAdapter_ExpoLinearGradient
    colors={
      [
        1040187391,
        150994943,
      ]
    }
    endPoint={
      [
        0.5,
        1,
      ]
    }
    pointerEvents="none"
    startPoint={
      [
        0.5,
        0,
      ]
    }
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <Text
    style={
      [
        {
          "fontSize": 14,
          "letterSpacing": 0.8,
        },
        {
          "color": "#241017",
          "fontFamily": "Baloo2_700Bold",
          "fontWeight": "400",
          "opacity": 1,
          "textTransform": "uppercase",
        },
      ]
    }
  >
    Play - Sunset Fire
  </Text>
</View>
`;

exports[`Neon design system snapshots Card snapshot [{ name: 'arcadeIce', label: 'Blue Nebula' }] 1`] = `
<View
  style={
    [
      {
        "overflow": "hidden",
        "position": "relative",
      },
      {
        "backgroundColor": "#1C2B4A",
        "borderColor": "#4F9CFF61",
        "borderRadius": 20,
        "borderWidth": 1,
        "elevation": 6,
        "gap": 8,
        "opacity": 1,
        "padding": 16,
        "shadowColor": "#4F9CFF",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.22,
        "shadowRadius": 12,
      },
      undefined,
    ]
  }
>
  <View
    pointerEvents="none"
    style={
      [
        {
          "height": 42,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "backgroundColor": "#4F9CFF1c",
        },
      ]
    }
  />
  <View
    style={
      {
        "gap": 4,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 20,
            "letterSpacing": 0.3,
            "lineHeight": 24,
          },
          {
            "color": "#F4F3FF",
            "fontFamily": "Baloo2_700Bold",
            "fontWeight": "400",
          },
        ]
      }
    >
      Impostor Neon
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 13,
            "lineHeight": 18,
          },
          {
            "color": "#F4F3FFD1",
            "fontFamily": "Nunito_700Bold",
            "fontWeight": "400",
          },
        ]
      }
    >
      Round checkpoint UI tokenized.
    </Text>
  </View>
</View>
`;

exports[`Neon design system snapshots Card snapshot [{ name: 'neonParty', label: 'Lime Pop' }] 1`] = `
<View
  style={
    [
      {
        "overflow": "hidden",
        "position": "relative",
      },
      {
        "backgroundColor": "#1D3123",
        "borderColor": "#5DE07D61",
        "borderRadius": 20,
        "borderWidth": 1,
        "elevation": 6,
        "gap": 8,
        "opacity": 1,
        "padding": 16,
        "shadowColor": "#5DE07D",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.22,
        "shadowRadius": 12,
      },
      undefined,
    ]
  }
>
  <View
    pointerEvents="none"
    style={
      [
        {
          "height": 42,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "backgroundColor": "#5DE07D1c",
        },
      ]
    }
  />
  <View
    style={
      {
        "gap": 4,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 20,
            "letterSpacing": 0.3,
            "lineHeight": 24,
          },
          {
            "color": "#F4F3FF",
            "fontFamily": "Baloo2_700Bold",
            "fontWeight": "400",
          },
        ]
      }
    >
      Impostor Neon
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 13,
            "lineHeight": 18,
          },
          {
            "color": "#F4F3FFD1",
            "fontFamily": "Nunito_700Bold",
            "fontWeight": "400",
          },
        ]
      }
    >
      Round checkpoint UI tokenized.
    </Text>
  </View>
</View>
`;

exports[`Neon design system snapshots Card snapshot [{ name: 'sunsetPulse', label: 'Sunset Fire' }] 1`] = `
<View
  style={
    [
      {
        "overflow": "hidden",
        "position": "relative",
      },
      {
        "backgroundColor": "#38202A",
        "borderColor": "#FF5F5F61",
        "borderRadius": 20,
        "borderWidth": 1,
        "elevation": 6,
        "gap": 8,
        "opacity": 1,
        "padding": 16,
        "shadowColor": "#FF5F5F",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.22,
        "shadowRadius": 12,
      },
      undefined,
    ]
  }
>
  <View
    pointerEvents="none"
    style={
      [
        {
          "height": 42,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "backgroundColor": "#FF5F5F1c",
        },
      ]
    }
  />
  <View
    style={
      {
        "gap": 4,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 20,
            "letterSpacing": 0.3,
            "lineHeight": 24,
          },
          {
            "color": "#F4F3FF",
            "fontFamily": "Baloo2_700Bold",
            "fontWeight": "400",
          },
        ]
      }
    >
      Impostor Neon
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 13,
            "lineHeight": 18,
          },
          {
            "color": "#F4F3FFD1",
            "fontFamily": "Nunito_700Bold",
            "fontWeight": "400",
          },
        ]
      }
    >
      Round checkpoint UI tokenized.
    </Text>
  </View>
</View>
`;

exports[`Neon design system snapshots Input snapshot [{ name: 'arcadeIce', label: 'Blue Nebula' }] 1`] = `
<View>
  <Text
    style={
      [
        {
          "fontSize": 12,
          "letterSpacing": 0.5,
          "marginBottom": 8,
          "textTransform": "uppercase",
        },
        {
          "color": "#F4F3FFD1",
          "fontFamily": "Nunito_700Bold",
          "fontWeight": "400",
        },
      ]
    }
  >
    Nickname
  </Text>
  <TextInput
    accessibilityLabel="Nickname"
    autoCapitalize="none"
    autoCorrect={false}
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    placeholder="Type your name"
    placeholderTextColor="#F4F3FF8A"
    spellCheck={false}
    style={
      [
        {
          "fontSize": 16,
          "paddingHorizontal": 14,
          "paddingVertical": 12,
        },
        {
          "backgroundColor": "#1C2B4AE6",
          "borderColor": "#4F9CFF6B",
          "borderRadius": 14,
          "borderWidth": 1,
          "color": "#F4F3FF",
          "fontFamily": "Nunito_700Bold",
          "fontWeight": "400",
          "minHeight": 44,
          "opacity": 1,
        },
      ]
    }
    value="Player01"
  />
</View>
`;

exports[`Neon design system snapshots Input snapshot [{ name: 'neonParty', label: 'Lime Pop' }] 1`] = `
<View>
  <Text
    style={
      [
        {
          "fontSize": 12,
          "letterSpacing": 0.5,
          "marginBottom": 8,
          "textTransform": "uppercase",
        },
        {
          "color": "#F4F3FFD1",
          "fontFamily": "Nunito_700Bold",
          "fontWeight": "400",
        },
      ]
    }
  >
    Nickname
  </Text>
  <TextInput
    accessibilityLabel="Nickname"
    autoCapitalize="none"
    autoCorrect={false}
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    placeholder="Type your name"
    placeholderTextColor="#F4F3FF8A"
    spellCheck={false}
    style={
      [
        {
          "fontSize": 16,
          "paddingHorizontal": 14,
          "paddingVertical": 12,
        },
        {
          "backgroundColor": "#1D3123E6",
          "borderColor": "#5DE07D6B",
          "borderRadius": 14,
          "borderWidth": 1,
          "color": "#F4F3FF",
          "fontFamily": "Nunito_700Bold",
          "fontWeight": "400",
          "minHeight": 44,
          "opacity": 1,
        },
      ]
    }
    value="Player01"
  />
</View>
`;

exports[`Neon design system snapshots Input snapshot [{ name: 'sunsetPulse', label: 'Sunset Fire' }] 1`] = `
<View>
  <Text
    style={
      [
        {
          "fontSize": 12,
          "letterSpacing": 0.5,
          "marginBottom": 8,
          "textTransform": "uppercase",
        },
        {
          "color": "#F4F3FFD1",
          "fontFamily": "Nunito_700Bold",
          "fontWeight": "400",
        },
      ]
    }
  >
    Nickname
  </Text>
  <TextInput
    accessibilityLabel="Nickname"
    autoCapitalize="none"
    autoCorrect={false}
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    placeholder="Type your name"
    placeholderTextColor="#F4F3FF8A"
    spellCheck={false}
    style={
      [
        {
          "fontSize": 16,
          "paddingHorizontal": 14,
          "paddingVertical": 12,
        },
        {
          "backgroundColor": "#38202AE6",
          "borderColor": "#FF5F5F6B",
          "borderRadius": 14,
          "borderWidth": 1,
          "color": "#F4F3FF",
          "fontFamily": "Nunito_700Bold",
          "fontWeight": "400",
          "minHeight": 44,
          "opacity": 1,
        },
      ]
    }
    value="Player01"
  />
</View>
`;
